--- a/compose.yaml
+++ b/compose.yaml
@@ -6,6 +6,7 @@ x-service-configuration: &base
     mem_limit: 1G
     cpu_count: 2
     cpus: '0.25'
+    env_file: .targets
     command:
         - ./app
 
