--- a/axum_player/Cargo.toml
+++ b/axum_player/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2024"
 
 [dependencies]
 axum = "0.8.4"
+dotenvy = "0.15.7"
+reqwest = "0.12.20"
 tokio = { version = "1.45.1", features = ["full"] }
