--- a/axum_player/Cargo.toml
+++ b/axum_player/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
 axum = "0.8.4"
 dotenvy = "0.15.7"
+lazy_static = "1.5.0"
 reqwest = "0.12.20"
 tokio = { version = "1.45.1", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
