--- a/axum_player/Cargo.toml
+++ b/axum_player/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow = "1.0.98"
 axum = "0.8.4"
 dotenvy = "0.15.7"
+futures = "0.3.31"
 lazy_static = "1.5.0"
 reqwest = "0.12.20"
 tokio = { version = "1.45.1", features = ["full"] }
